--- a/helmcharts/go-sample-application/templates/ingress.yaml
+++ b/helmcharts/go-sample-application/templates/ingress.yaml
@@ -4,21 +4,22 @@ kind: Ingress
 metadata:
   name: {{ include "sample-application-chart.fullname" . }}
   annotations:
-    kubernetes.io/ingress.class: haproxy
   labels:
     app:  {{ include "sample-application-chart.fullname" . }}
     {{- include "sample-application-chart.labels" . | nindent 4 }}
 spec:
+  ingressClassName: {{ .Values.ingress.class }}
   rules:
     - host: {{ .Values.ingress.host }}
       http:
+        
         paths:
           - backend:
               service:
                 name: webserver-{{ include "sample-application-chart.fullname" . }}
                 port:
-                  number: 80
-
+                  number: {{ .Values.webserver.container.port}}
+                  
             path: /
             pathType: Prefix
   tls:
