--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 bin
 helmcharts/go-sample-application/values-dev.yaml
 helmcharts/go-sample-application/values-test.yaml
+helmcharts/go-sample-application/values-traefik.yaml
