--- a/helmcharts/go-sample-application/templates/webserver-service.yaml
+++ b/helmcharts/go-sample-application/templates/webserver-service.yaml
@@ -11,6 +11,6 @@ spec:
   type: "{{ .Values.service.type }}"
   ports:
     - name: http
-      port: 80
+      port: {{ .Values.webserver.container.port}}
       targetPort: {{ .Values.webserver.container.port}}
       protocol: TCP
